[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nokast-privacy-masker"
version = "0.1.0"
description = "Local-first privacy safety net: mask sensitive data before pasting into AI tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Abhishek Rai" }]
keywords = [
    "privacy", "redaction", "pii", "secrets", "security",
    "clipboard", "dotenv", "ai", "llm", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# The core engine and CLI have no third-party dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/abhishek085/nokast-privacy-masker"
Repository = "https://github.com/abhishek085/nokast-privacy-masker"
Issues = "https://github.com/abhishek085/nokast-privacy-masker/issues"

[project.optional-dependencies]
# Clipboard read/write for `mask --clipboard` and `watch`.
clipboard = ["pyperclip>=1.8"]
# Contextual PII detection (names, locations, orgs, dates) via Microsoft
# Presidio (open source), which wraps a spaCy model with context-aware scoring.
# After installing, download a model: python -m spacy download en_core_web_sm
ner = ["presidio-analyzer>=2.2"]
# Reversible lock/unlock: encrypted vault + optional OS-keychain passphrase cache.
vault = ["cryptography>=41", "keyring>=24"]
# Everything except the NER model download (install that separately).
all = ["pyperclip>=1.8", "presidio-analyzer>=2.2", "cryptography>=41", "keyring>=24"]
dev = ["pytest>=7.0", "pyperclip>=1.8", "cryptography>=41", "build>=1.0", "twine>=5.0"]

[project.scripts]
privacy-masker = "privacy_masker.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["privacy_masker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
